<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CareerLevalActivity">





        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Career Level and Domain"
                            android:paddingBottom="@dimen/_5sdp"
                            android:typeface="serif"
                            android:textStyle="bold"
                            android:layout_marginLeft="@dimen/_5sdp" />


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:paddingBottom="@dimen/_5sdp"
                            android:layout_gravity="end"
                            android:id="@+id/imgRight"
                            android:scaleType="fitEnd"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:src="@drawable/tick" />
                    </LinearLayout>



                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">



                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:typeface="serif"
                             android:text=" What is your career level ?"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginLeft="@dimen/_20sdp"
                             android:textStyle="bold"/>

                         <RadioGroup
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:orientation="vertical"/>


                         <RadioButton
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/radioStudent"
                             android:layout_marginLeft="@dimen/_20sdp"
                             android:text="Student"/>


                         <RadioButton
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:id="@+id/radioExperince"
                             android:layout_marginLeft="@dimen/_20sdp"
                             android:text="Experirnced"/>



                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:text="What is your preferred domain ?"
                             android:textStyle="bold"
                             android:typeface="serif"
                             android:layout_marginLeft="@dimen/_20sdp"/>


                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/accounting_finace"
                             android:background="@drawable/rectangle_button"
                             android:padding="@dimen/_5sdp"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginLeft="@dimen/_20sdp"/>


                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Administrative"
                             android:background="@drawable/rectangle_button"
                             android:padding="@dimen/_5sdp"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginLeft="@dimen/_20sdp"/>

                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/business_management"
                             android:background="@drawable/rectangle_button"
                             android:padding="@dimen/_5sdp"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginLeft="@dimen/_20sdp"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/customer_service_operateons"
                             android:background="@drawable/rectangle_button"
                             android:padding="@dimen/_5sdp"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginLeft="@dimen/_20sdp"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/construction_building"
                             android:background="@drawable/rectangle_button"
                             android:padding="@dimen/_5sdp"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginLeft="@dimen/_20sdp"/>

                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">



                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Design"
                         android:background="@drawable/rectangle_button"
                         android:paddingHorizontal="@dimen/_10sdp"
                         android:paddingVertical="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:layout_marginLeft="@dimen/_20sdp"/>

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Education"
                         android:background="@drawable/rectangle_button"
                         android:paddingHorizontal="@dimen/_10sdp"
                         android:paddingVertical="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:layout_marginLeft="@dimen/_20sdp"/>

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Engineering"
                         android:background="@drawable/rectangle_button"
                         android:paddingHorizontal="@dimen/_10sdp"
                         android:paddingVertical="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:layout_marginLeft="@dimen/_20sdp"/>
                 </LinearLayout>


                      <LinearLayout
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content">


                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/hr_recruitment"
                              android:background="@drawable/rectangle_button"
                              android:paddingHorizontal="@dimen/_10sdp"
                              android:paddingVertical="@dimen/_5sdp"
                              android:layout_marginTop="@dimen/_5sdp"
                              android:layout_marginLeft="@dimen/_20sdp"/>


                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="IT SoftWare"
                              android:background="@drawable/rectangle_button"
                              android:paddingHorizontal="@dimen/_10sdp"
                              android:paddingVertical="@dimen/_5sdp"
                              android:layout_marginTop="@dimen/_5sdp"
                              android:layout_marginLeft="@dimen/_20sdp"/>


                      </LinearLayout>



                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">

                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Chartered Accountant"
                                 android:background="@drawable/rectangle_button"
                                 android:paddingHorizontal="@dimen/_10sdp"
                                 android:paddingVertical="@dimen/_5sdp"
                                 android:layout_marginTop="@dimen/_5sdp"
                                 android:layout_marginLeft="@dimen/_20sdp"/>

                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Delivery Services"
                                 android:background="@drawable/rectangle_button"
                                 android:paddingHorizontal="@dimen/_10sdp"
                                 android:paddingVertical="@dimen/_5sdp"
                                 android:layout_marginTop="@dimen/_5sdp"
                                 android:layout_marginLeft="@dimen/_20sdp"/>

                         </LinearLayout>



                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Computer Operator/ Data Entry"
                             android:background="@drawable/rectangle_button"
                             android:paddingHorizontal="@dimen/_10sdp"
                             android:paddingVertical="@dimen/_5sdp"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginLeft="@dimen/_20sdp"/>






                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nursing"
                            android:background="@drawable/rectangle_button"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginLeft="@dimen/_20sdp"/>


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hospitality_tourism"
                            android:background="@drawable/rectangle_button"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginLeft="@dimen/_20sdp"/>



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Legal"
                            android:background="@drawable/rectangle_button"
                            android:paddingHorizontal="@dimen/_10sdp"
                            android:paddingVertical="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginLeft="@dimen/_20sdp"/>

                    </LinearLayout>

                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Manufacturing"
                         android:background="@drawable/rectangle_button"
                         android:paddingHorizontal="@dimen/_10sdp"
                         android:paddingVertical="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:layout_marginLeft="@dimen/_20sdp"/>



                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Sales"
                         android:background="@drawable/rectangle_button"
                         android:paddingHorizontal="@dimen/_10sdp"
                         android:paddingVertical="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:layout_marginLeft="@dimen/_20sdp"/>




                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Banking"
                         android:background="@drawable/rectangle_button"
                         android:paddingHorizontal="@dimen/_10sdp"
                         android:paddingVertical="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:layout_marginLeft="@dimen/_20sdp"/>
                 </LinearLayout>


                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">

                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Supervision"
                                 android:background="@drawable/rectangle_button"
                                 android:paddingHorizontal="@dimen/_10sdp"
                                 android:paddingVertical="@dimen/_5sdp"
                                 android:layout_marginTop="@dimen/_5sdp"
                                 android:layout_marginLeft="@dimen/_20sdp"/>



                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Teaching"
                                 android:background="@drawable/rectangle_button"
                                 android:paddingHorizontal="@dimen/_10sdp"
                                 android:paddingVertical="@dimen/_5sdp"
                                 android:layout_marginTop="@dimen/_5sdp"
                                 android:layout_marginLeft="@dimen/_20sdp"/>


                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Other"
                                 android:background="@drawable/rectangle_button"
                                 android:paddingHorizontal="@dimen/_10sdp"
                                 android:paddingVertical="@dimen/_5sdp"
                                 android:layout_marginTop="@dimen/_5sdp"
                                 android:layout_marginLeft="@dimen/_20sdp"/>
                         </LinearLayout>


                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Beauty/Fitness/Spa"
                             android:background="@drawable/rectangle_button"
                             android:paddingHorizontal="@dimen/_10sdp"
                             android:paddingVertical="@dimen/_5sdp"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginLeft="@dimen/_20sdp"/>


                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Markrting"
                             android:background="@drawable/rectangle_button"
                             android:paddingHorizontal="@dimen/_10sdp"
                             android:paddingVertical="@dimen/_5sdp"
                             android:layout_marginTop="@dimen/_5sdp"
                             android:layout_marginLeft="@dimen/_20sdp"/>


                     </LinearLayout>

                </LinearLayout>
            </ScrollView>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


